--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6EYZTiX2VAbIy46LcGs6L"
+      "authorship_tag": "ABX9TyNI0I1eTj54Y9ebkzB/JVlD",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/manthanawgan/Drowsiness-Detector-YOLO/blob/main/main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -47,165 +58,6 @@
     {
       "cell_type": "code",
       "source": [
-        "cd"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rPQilNxIkHsS",
-        "outputId": "bd88d422-7bd5-4209-8b85-64e52f07a9cc"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/root\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!cd"
-      ],
-      "metadata": {
-        "id": "zInwIXOBmF40"
-      },
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!zip -r yolov5.zip /ultralytics/yolov5\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1eL2tTWgmIgv",
-        "outputId": "b4e3ff90-a69b-4d31-b95d-f35736e1f4e8"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\tzip warning: name not matched: /ultralytics/yolov5\n",
-            "\n",
-            "zip error: Nothing to do! (try: zip -r yolov5.zip . -i /ultralytics/yolov5)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git clone https://github.com/ultralytics/yolov5\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "n-uZrLYYomyL",
-        "outputId": "fd4b992a-ad71-4c51-831b-7e8c03bc3f46"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'yolov5'...\n",
-            "remote: Enumerating objects: 17088, done.\u001b[K\n",
-            "remote: Counting objects: 100% (37/37), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (30/30), done.\u001b[K\n",
-            "remote: Total 17088 (delta 23), reused 7 (delta 7), pack-reused 17051 (from 3)\u001b[K\n",
-            "Receiving objects: 100% (17088/17088), 15.70 MiB | 16.61 MiB/s, done.\n",
-            "Resolving deltas: 100% (11728/11728), done.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!cd yolov5 & pip install -r requirements.txt\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OQAJrAc1qyD_",
-        "outputId": "ee1f79bb-f782-4b68-ac46-8382b0d22734"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!cd yolov5 & pip install -r requirements.txt\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "w-EvSSAC1AGP",
-        "outputId": "8e4244c9-9fb1-4fb5-fbd2-869259a87a62"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "cd yolov5\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cAVbR6lw2aZh",
-        "outputId": "524dac81-7d23-4b73-ca0b-6974486c32c1"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/root/yolov5\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "!cd yolov5\n"
       ],
       "metadata": {
@@ -215,7 +67,7 @@
         "id": "afzmGKjF2nlv",
         "outputId": "54c9301a-665b-4626-a2ad-e7ffa53fa75f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +90,7 @@
         "id": "IoTFRBM62o_Y",
         "outputId": "27a9bfca-12ad-4bac-ce2f-1733ab33e60b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +116,7 @@
         "id": "9KH8Ff9X2sjC",
         "outputId": "06fdda19-5e7a-4939-ea1e-17f1b479ebd0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +145,7 @@
         "id": "vZrrpOue2xfj",
         "outputId": "69b5e3e8-2e29-40aa-e446-e5b645949608"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,7 +224,7 @@
         "id": "VPAsqgKV21BE",
         "outputId": "710525c9-6aa9-4c29-f1b6-1d217064f913"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,15 +262,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "oeVHNPJDD2aA"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "model\n"
       ],
@@ -429,7 +272,7 @@
         "id": "FhXFy3y9CSfH",
         "outputId": "e045fd13-af39-490b-9d3c-dd138443dd27"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -762,7 +605,7 @@
         "id": "M48ITkoPCluM",
         "outputId": "d19f89cc-a9df-4972-f35f-d991c60f4999"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -791,7 +634,7 @@
         "id": "EGOvwU52DVCd",
         "outputId": "a898570e-e92e-4f5d-e9b0-d5c1a38800fc"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -815,36 +658,6 @@
       "cell_type": "code",
       "source": [
         "%matplotlib inline\n",
-        "plot.imshow(np.squeeze(results.render()))\n",
-        "plt.show()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
-        },
-        "id": "N9YefRi4Dpcs",
-        "outputId": "1f49f576-7302-4b51-faa0-cfde52f613a4"
-      },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'plot' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-cf1a2bcf02a6>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'plot' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%matplotlib inline\n",
         "plt.imshow(np.squeeze(results.render()))\n",
         "plt.show()"
       ],
@@ -856,7 +669,7 @@
         "id": "4F-pC0VeEZjJ",
         "outputId": "e6696edd-d915-4950-e598-f8aceb4e9450"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -882,7 +695,7 @@
         "id": "3CGECSEnEetE",
         "outputId": "80b2469b-dac8-4b75-d04e-9e7e90d050c4"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -911,7 +724,7 @@
         "id": "PXFZD3FeFAoK",
         "outputId": "ec8faede-532b-4a36-9dbc-e84c7453fe7a"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
